--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>FAVOR LYRICS 🌠</h1>
     <h4>LAWRENCE OYOR</h4>
-    <hr />
+    <hr/>
     <a href="https://youtu.be/hNEghsp78Nc?si=lQPRVGzR2yeuHUnt">
       <img src="download.jpg" alt="img of video" />
     </a>
@@ -109,8 +109,9 @@ Until the day I see my King
       <pre>
 Come on
 Celebrate Jesus
-</pre
-      >
+</pre>
+<hr>
+<h3>LYRICS BY KUYE 🔥 </h3>
     </div>
   </body>
 </html>
